# switchboard_randomness

./: Anchor.toml  extra-test.ts  package.json
programs/random_number_generator/: Cargo.toml
programs/random_number_generator/src/: lib.rs
tests/: random_number_generator.ts
utils/: utils.ts
